# padel-market-analysis

./: .gitignore  .pre-commit-config.yaml  .vercelignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  QUALITY_BAR.md  README.md  SECURITY.md  package.json  pyproject.toml  vercel.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: deploy-pages.yml  quality-gates.yml
evidence/20260501T135005Z/: 00_blueprint.json  02_aura.json  03_peers_dedup.json  03_peers_raw.jsonl  05_jobs_graph.json  06_red_team.json  07_interview_guide.md  09_moat_audit.json  10_monetization.json  11_gtm.json  12_geo.json  13_capability_map.json  15_market_size.json  19_uae_uzbekistan_check.json  20_sam_global_market_check.json  canonical_brief.json
evidence/20260501T135005Z/01_job_stories/: JS-001.yaml  JS-002.yaml  JS-003.yaml  JS-004.yaml
evidence/20260501T135005Z/04_peer_cards/: clutch.json  coachseek.json  decorte_cvpr2024_padel.json  eyes_on_padel.json  hudl.json  joao_silva_padel_analytics.json  matchi.json  padelboard.json  padelplay.json  padelytics.json  paradigma_case_study.json  playsight.json  playtomic.json  premier_padel.json  skedda.json  spash.json  wingfield.json
evidence/20260501T135005Z/08_value_mechanics/: VM-001.json  VM-002.json  VM-003.json  VM-004.json  VM-005.json  VM-006.json  VM-007.json  VM-008.json  VM-009.json  VM-010.json  VM-011.json
evidence/20260501T135005Z/16/: dod-checklist.md  multi-persona-audit.md  red-team-final.md
evidence/_audits/: qa_ml_ds.md  swe_devops.md
evidence/_mobile_audit/: DIFF.md
evidence/_mobile_audit/baseline/: summary.json
evidence/_mobile_audit/post/: summary.json
evidence/research/ai-search-optimization/: SUMMARY.md
reports/final/: 404.html  90-day-plan.html  README.md  competitor-landscape.html  data.json  evidence-map.html  feed.xml  humans.txt  index.html  llms-full.txt  llms.txt  manifest.webmanifest  methodology.html  model-provenance.html  mvp-design.html  nav.js  padel-ai-coach-research.html  robots.txt  sitemap.xml  subscription-economics.html  topnav.css
reports/final/.well-known/: security.txt
reports/final/interview-pack/: 30-60-90-plan.html  competitor-intelligence.html  index.html  jd-coverage-map.html  model-provenance.html  mvp-loop-design.html  subscription-economics.html
reports/interview_pack/_audit/: audit_report.json  link_verify_report.json
reports/interview_pack/_redteam/: red_team_report.md
reports/interview_pack/deliverables/: 01_competitor_intelligence.md  02_subscription_economics.md  03_mvp_loop_design.md  05_jd_coverage_map.md  06_model_provenance.md
reports/interview_pack/evidence/: 00_model_provenance.json  (+2 more)
scripts/: _or_call.py  agent_prompt_preamble.md  audit_diff.mjs  audit_interview_pack.mjs  audit_mobile.mjs  audit_sources.mjs  build_all.sh  build_interview_pack_html.mjs  build_og_image.mjs  build_pages.mjs  build_report_data.py  build_seo_assets.py  capture_interview_screenshots.mjs  capture_source_screenshots.mjs  check_aura.py  check_blueprint.py  check_canonical_brief.py  check_capability_bands.py  check_citations.py  check_dod.py  check_first_person.py  check_geo_bands.py  check_gtm.py  check_interview_guide.py  check_moat_audit.py  check_moat_class.py  check_moat_taxonomy.py  check_monetization.py  check_no_future_tense.py  check_numeric_claims.py  check_peer_card_schema.py  check_peer_discovery.py  check_quality.py  check_quote_dedup.py  check_quote_lengths.py  check_red_team.py  check_section_completeness.py  check_usp.py  compute_rice.py  cost_report.sh  (+16 more)
tests/: test_check_quality.py  test_sanitise_pages.py
(+10 files in other folders)
